JT-2405 fix issue with extra space between people icons
  - spacing existed between icons because they were on new lines
  - created partial to put all 10 people icons next to eachother
  - added line-spacing and height to reduce top and bottom margin
  - increased size of font for people

--- a/app/assets/stylesheets/components/_person-bar-viz.scss
+++ b/app/assets/stylesheets/components/_person-bar-viz.scss
@@ -1,4 +1,6 @@
 .person-bar-viz {
+  $people-height: 75px;
+  font-family: 'icon-greatscools';
   $background-gray: #dbe6eb;
   .arrow-down {
     position: relative;
@@ -16,8 +18,10 @@
   .person-progress {
     position: relative;
     white-space: nowrap;
-    font-size: 40px;
+    font-size: $people-height;
+    line-height: $people-height;
     display: inline-block;
+    height: $people-height;
   }
   .person-progress > .background {
     color: $background-gray;
